@@ -32,13 +32,13 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Set;
 
+import javax.security.auth.login.Configuration;
+import javax.security.auth.login.LoginException;
+
 import org.apache.zookeeper.Login;
 import org.apache.zookeeper.server.auth.SaslServerCallbackHandler;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import javax.security.auth.login.Configuration;
-import javax.security.auth.login.LoginException;
 
 public class NIOServerCnxnFactory extends ServerCnxnFactory implements Runnable {
     private static final Logger LOG = LoggerFactory.getLogger(NIOServerCnxnFactory.class);
@@ -72,12 +72,10 @@ public class NIOServerCnxnFactory extends ServerCnxnFactory implements Runnable 
     */
     final ByteBuffer directBuffer = ByteBuffer.allocateDirect(64 * 1024);
 
-    final HashSet<ServerCnxn> cnxns = new HashSet<ServerCnxn>();
     final HashMap<InetAddress, Set<NIOServerCnxn>> ipMap =
         new HashMap<InetAddress, Set<NIOServerCnxn>>( );
 
     int maxClientCnxns = 60;
-
 
     /**
      * Construct a new server connection factory which will accept an unlimited number
@@ -322,5 +320,4 @@ public class NIOServerCnxnFactory extends ServerCnxnFactory implements Runnable 
     public Iterable<ServerCnxn> getConnections() {
         return cnxns;
     }
-
 }
