@@ -140,4 +140,8 @@ public class ZooKeeperServerBean implements ZooKeeperServerMXBean, ZKMBeanInfo {
         serverStats.resetRequestCounters();
         serverStats.resetLatency();
     }
+
+    public long getNumAliveConnections() {
+        return zks.getNumAliveConnections();
+    }
 }
