@@ -219,6 +219,7 @@ IMPROVEMENTS:
   ZOOKEEPER-1322. Cleanup/fix logging in Quorum code. 
   (phunt via mahadev)
 
+  ZOOKEEPER-1321. Add number of client connections metric in JMX and srvr. (Neha Narkhede via camille)
 Release 3.4.0 - 
 
 Non-backward compatible changes:
